fixed white space

--- a/css.css
+++ b/css.css
@@ -1,3 +1,9 @@
+
+html,body{
+    height: 100%; 
+    overflow:auto;
+}
+
 body,
 h1,
 h2,
